# bigman-antivirus

./: Cargo.toml  TODO.md  com.bigman.pdf_scanner.json  content.js  install-native-messaging.sh  link-detector.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  run-tests.sh
browser-extension/: background.js  content.js  link-detector.js  manifest.json  package-lock.json  pdf-listener.js  popup.html
browser-extension/config/: brand-domains.json
src/: analyzer.rs  gui.rs  honey_files.rs  ipc.rs  main.rs  pdf_scanner.rs
tests/: link-detector.test.js
